<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    android:id="@+id/popup_menu">

<TextView
    android:id="@+id/menu_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="36dp"
    android:textSize="28sp"
    app:layout_constraintEnd_toEndOf="parent" />

    <android.widget.Button
        android:id="@+id/continue_btn"
        android:background="@drawable/style_popup_menu_buttons"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_text" />

    <android.widget.Button
        android:id="@+id/settings_btn"
        android:background="@drawable/style_popup_menu_buttons"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_btn" />

    <android.widget.Button
        android:id="@+id/save_exit_btn"
        android:background="@drawable/style_popup_menu_buttons"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save_exit"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="49dp" />

</androidx.constraintlayout.widget.ConstraintLayout>