<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gameActivityXML"
    android:background="@color/yellow"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_settings"
        android:textColor="@color/brown"
        android:textSize="30sp"
        android:paddingTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto_medium"
        android:text="@string/sound_text"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_settings" />

    <SeekBar
        android:id="@+id/seek_bar_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:thumbOffset="0dp"
        android:progress="0"
        android:progressDrawable="@drawable/style_seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/ic_thumb"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/title_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_sound"/>

    <TextView
        android:id="@+id/title_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="59dp"
        android:text="@string/title_complexity"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_volume" />


    <TextView
        android:id="@+id/level_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/lvl_easy"
        android:textAllCaps="true"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/title_complexity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/volume_button_previous"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/previous"
        app:layout_constraintTop_toTopOf="@id/level_complexity"
        app:layout_constraintBottom_toBottomOf="@id/level_complexity"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/volume_button_next"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/next"
        app:layout_constraintTop_toTopOf="@id/level_complexity"
        app:layout_constraintBottom_toBottomOf="@id/level_complexity"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/title_winrules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="59dp"
        android:text="@string/title_winrules"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_complexity" />

    <CheckBox
        android:id="@+id/checkbox_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:button="@drawable/style_checkbox"
        android:paddingStart="15dp"
        android:theme="@style/Theme.AppCompat.Light"
        android:text="@string/row_vertically"
        android:textColor="@color/brown"
        android:textSize="24sp"

        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_winrules"/>

    <CheckBox
        android:id="@+id/checkbox_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:button="@drawable/style_checkbox"
        android:paddingStart="15dp"
        android:theme="@style/Theme.AppCompat.Light"
        android:checked="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/row_horizontally"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_vertical" />

    <CheckBox
        android:id="@+id/checkbox_diagonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:button="@drawable/style_checkbox"
        android:paddingStart="15dp"
        android:theme="@style/Theme.AppCompat.Light"
        android:checked="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/row_diagonal"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_return_to_start_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/style_button"
        android:fontFamily="@font/roboto_light"
        android:text="@string/title_return"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@null"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_diagonal" />

</androidx.constraintlayout.widget.ConstraintLayout>