<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startActivityXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow">


    <ImageView
        android:id="@+id/mainImageTicTacToe"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/logo_main"
        android:layout_marginTop="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/toNewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="170dp"
         android:background="@drawable/style_button"
        android:fontFamily="@font/roboto_light"
        android:padding="16dp"
        android:text="@string/title_new_game"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImageTicTacToe" />

     <com.google.android.material.button.MaterialButton
        android:id="@+id/toContinueGame"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        app:backgroundTint="@null"
        android:layout_height="wrap_content"
        android:text="@string/title_continue_game"
         android:textSize="24sp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="38dp"
         android:layout_marginEnd="38dp"
        android:padding="16dp"
        android:background="@drawable/style_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/toNewGame"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toSettingsGame"
        android:layout_marginTop="24dp"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:backgroundTint="@color/brown"
        android:background="@drawable/style_button"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/toContinueGame"

        />

</androidx.constraintlayout.widget.ConstraintLayout>